Addition of visibility rules for search + css fixes.

--- a/sass/components/panels/_panels.scss
+++ b/sass/components/panels/_panels.scss
@@ -1,21 +1,4 @@
 /* =============================================================================
-   CTools
-   ========================================================================== */
-.ctools-modal-dialog .modal-content {
-  background-color: #fff;
-}
-
-/* =============================================================================
-   Features
-   ========================================================================== */
-.feature-lnks h3 a {
-  font-size: 16px;
-}
-
-/* =============================================================================
-   Panels
-   ========================================================================== */
-/* =============================================================================
    Panels
    ========================================================================== */
 
@@ -149,37 +132,4 @@ dl.page-manager-wizards dd {
 
 body form#page-manager-list-pages-form, body form#ctools-export-ui-list-form {
   margin: 1em 0;
-}
-
-/* =============================================================================
-   System
-   ========================================================================== */
-p:last-child {
-  margin: 0 0 11.5px;
-}
-
-.pane-page-messages {
-  margin-top: 30px;
-}
-
-.tabs--primary.nav-tabs {
-  margin-bottom: 1.5em;
-}
-
-.node-form #node-edit .pane-form .pane-content {
-  clear: both;
-  margin-top: 1.5em;
-}
-
-/* =============================================================================
-   WxT
-   ========================================================================== */
-.page-node-edit.wet-boew-gcweb main.container {
-  background-color: #FFF;
-}
-
-.wet-boew-gcweb #wb-cont {
-  border-bottom: 1px solid #eee;
-  margin-top: .45em;
-  padding-bottom: 5px;
 }
